Assignment 1, questions revised.

--- a/Assignment_1_Student_2026-01-21.ipynb
+++ b/Assignment_1_Student_2026-01-21.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "mpUDnGbSj40R"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 2,
       "metadata": {
         "id": "dxByYcJ6j40S"
       },
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "metadata": {
         "id": "5QjerxF7j40T"
       },
@@ -147,60 +147,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
-            "\twith 6933744 stored elements and shape (50000, 159156)>\n",
-            "  Coords\tValues\n",
-            "  (0, 22701)\t1.0\n",
-            "  (0, 27038)\t1.0\n",
-            "  (0, 26402)\t1.0\n",
-            "  (0, 64995)\t1.0\n",
-            "  (0, 30768)\t1.0\n",
-            "  (0, 38811)\t1.0\n",
-            "  (0, 25850)\t1.0\n",
-            "  (0, 47217)\t1.0\n",
-            "  (0, 36037)\t1.0\n",
-            "  (0, 39602)\t1.0\n",
-            "  (0, 53941)\t1.0\n",
-            "  (0, 42862)\t1.0\n",
-            "  (0, 1387)\t1.0\n",
-            "  (0, 39675)\t1.0\n",
-            "  (0, 56610)\t1.0\n",
-            "  (0, 1169)\t1.0\n",
-            "  (0, 30605)\t1.0\n",
-            "  (0, 32616)\t1.0\n",
-            "  (0, 34496)\t1.0\n",
-            "  (0, 39414)\t1.0\n",
-            "  (0, 47321)\t1.0\n",
-            "  (0, 39706)\t1.0\n",
-            "  (0, 57463)\t1.0\n",
-            "  (0, 32905)\t1.0\n",
-            "  (0, 44458)\t1.0\n",
-            "  :\t:\n",
-            "  (49999, 98756)\t0.027458745504900503\n",
-            "  (49999, 91487)\t0.05925967450436435\n",
-            "  (49999, 106544)\t0.05558119867319322\n",
-            "  (49999, 90011)\t0.11113659222008582\n",
-            "  (49999, 99997)\t0.13284565610887467\n",
-            "  (49999, 88841)\t0.07802994930915413\n",
-            "  (49999, 93948)\t0.029080268955124212\n",
-            "  (49999, 92446)\t0.02830457822684744\n",
-            "  (49999, 91432)\t0.05291336927076455\n",
-            "  (49999, 91224)\t0.02838313538672794\n",
-            "  (49999, 95238)\t0.053688946053603526\n",
-            "  (49999, 111530)\t0.08344944229320124\n",
-            "  (49999, 91553)\t0.08354701676535001\n",
-            "  (49999, 109941)\t0.08248595898535831\n",
-            "  (49999, 94018)\t0.053015021101960755\n",
-            "  (49999, 89822)\t0.03310817353135148\n",
-            "  (49999, 93802)\t0.03375930597298165\n",
-            "  (49999, 91091)\t0.02849210869594319\n",
-            "  (49999, 89771)\t0.028709147982230284\n",
-            "  (49999, 111606)\t0.03532765376418807\n",
-            "  (49999, 88595)\t0.06046142438991941\n",
-            "  (49999, 91310)\t0.02992680019464373\n",
-            "  (49999, 107693)\t0.03831473704072532\n",
-            "  (49999, 100834)\t0.028895511914682388\n",
-            "  (49999, 92697)\t0.030871667120610888\n"
+            "(50000, 159156)\n"
           ]
         }
       ],
@@ -211,7 +158,7 @@
         "# Concatenate token count features and TF-IDF features on the feature dimension,\n",
         "# name the combined feature matrix `feat_comb`.\n",
         "feat_comb = hstack([feat1,feat2])\n",
-        "print(feat_comb)\n",
+        "print(feat_comb.shape)\n",
         "pass"
       ]
     },
@@ -226,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 4,
       "metadata": {
         "id": "trteOuMnj40T"
       },
@@ -248,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 5,
       "metadata": {
         "id": "NdvLp3Z1j40U"
       },
@@ -349,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "TdeGmMHYj40U"
       },
@@ -414,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 7,
       "metadata": {
         "id": "Ovl_tiKmj40U"
       },
@@ -641,7 +588,7 @@
       "source": [
         "3. If the training data is highly unbalanced, is `accuracy` a good metric for the classifiers' performance? Does a high accuracy necessarily means a high f1-score? Compare `accuracy` with `f1-score`. Based on your criterion, which type of classifier is better? Please give some justifications to support your answer.\n",
         "\n",
-        "**Answer:** No it is not, no it does not. Accuracy simply measures the number of correct classifications over the total number of data points, while F1 measures the number of true positives against the number of false classifications. We don't actually care all that much about false negatives (i.e. 'ham' identified as 'ham') when considering the security of our system. F1 score is better because identifying false classifications is more important than true classifcations. A high number of false negatives (i.e. 'spam' classified as 'ham') can indicate a serious security threat that may be ignored if the number of true negatives is overrepresented."
+        "**Answer:** No it is not, no it does not. Accuracy simply measures the number of correct classifications over the total number of data points, while F1 measures the number of true positives against the number of false classifications. We don't actually care all that much about false negatives (i.e. 'ham' identified as 'ham') when considering the security of our system. F1 score is better because identifying false classifications is more important than true classifcations. A high number of false negatives (i.e. 'spam' classified as 'ham') can indicate a serious security threat that may be ignored if the number of true negatives is overrepresented. SVM is the best classifier as it has high scores in f-1 and accuracy."
       ]
     },
     {
@@ -651,7 +598,8 @@
       },
       "source": [
         "4. For most cases, the amount of bad data is much less than good data. How can you mitigate the data imbalance issue?\n",
-        "\n"
+        "\n",
+        "**Answer:** I read a paper on this exact topic, which I have included below as student references #1, I tend to agree with its conclusion. When training any machine learning model, it will be almost impossible to avoid skewed data sets, so the best we can do is to focus on the rate of false negatives as a metric for model efficacy. Oversampling the bad data, or undersampling the good, may also help with mitigating the imbalance issues."
       ]
     },
     {
